--- a/ui/webapp/index.html
+++ b/ui/webapp/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Product Catalog</title>
+    <title>Archlynk Product-Catalog</title>
+    <link href="https://archlynk.com/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <style>
         html, body, body > div, #container, #container-uiarea {
             height: 100%;
